Infra/K8S_AKS/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: togglemaster-ingress
  namespace: toggle-apps
  annotations:
    kubernetes.io/ingress.class: azure/application-gateway
spec:
  rules:
    - http:
        paths:
          - path: /flags
            pathType: Prefix
            backend:
              service:
                name: flag-service
                port:
                  number: 80
          - path: /rules
            pathType: Prefix
            backend:
              service:
                name: targeting-service
                port:
                  number: 80
          - path: /evaluate
            pathType: Prefix
            backend:
              service:
                name: evaluation-service
                port:
                  number: 80
          - path: /validate
            pathType: Prefix
            backend:
              service:
                name: auth-service
                port:
                  number: 80
          - path: /admin
            pathType: Prefix
            backend:
              service:
                name: auth-service
                port:
                  number: 80
